# auto-shift-input-math

./: .gitignore  README.md  auto-shift-input.code-workspace  package-lock.json  package.json
native/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json
native/include/: im_main.h
native/src/: im_main.c
native/test/: dlltest.c  dlltest.py
src/: autoShift.ts  extension.ts  switch-koffi.ts  thirdparty.ts  utils.ts
